feat(backend): add filter by category to <post>